  * Update: Combined ``user_create_dialog`` and ``user_update_dialog`` into one.
  * Update: Replaced DataGrid objects with dgrid.
  * Update: Added navigation bar for assets, shots, sequences.
  * Update: Combined ``project_create_dialog`` and ``project_update_dialog`` into one.
  * Fix: Updating a project now correctly refreshes the ``project_summary``
    content pane.
* jQueryGantt:
  * Update: Replaced the ``duration`` column with ``timing`` which correctly
    shows the schedule timing info of the related task.
  * Fix: The ``depends`` column shows the dependent task names correctly.

0.2.0.b1
--------

* WorkingHours.is_working_hour() is working now.
* WorkingHours class is moved from stalker.models.project to
  stalker.models.studio module.
* ``daily_working_hours`` attribute is moved from
  stalker.models.project.Project to stalker.models.studio.Studio class.
* Repository path variables now ends with a forward slash even if it is not
  given.
* Updated Project classes validation messages to correlate with Stalker
  standard.
* Implementation of the Studio class is finished. The scheduling works like a
  charm.
* Added dialogCreator.js which helps creating a dialog without having a widget
  (Button or MenuItem) calling it and updated dialogCaller.js to use
  dialogCreator while creating a dialog.
* It is now possible to use any characters in SimpleEntity.name and the derived
  classes.
* jQueryGantt:
  * Fix; t is now possible to correctly move a TaskBar without getting in to
    an infinite loop which was freezing the browser.
  * The timing resolution of jQueryGantt is now 1 hour.
  * Fix; GanttMaster.task_ids were not properly cleaned in GanttMaster.reset(),
    resulting wrong links to be created.
  * Added a new zoom level where it is possible to see the every 1 hour of 1
    day.
  * Colorized the Sunday column in suitable zoom levels. In upcoming releases
    it will use the stalker.models.studio.Studio.working_hours attribute to